check in & room updated

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -4,13 +4,13 @@
     </div>
     <div class="col-md-6">
         <div class="card text-center">
-            <h2>Motel Admin</h2>
+            <h2>Century Motel</h2>
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="UserName" />
                 <br>
                 <input type="password" class="form-control" placeholder="Password" />
                 <br>
-                <input type="button" value="Proceed" class="btbn btn-primary" />
+                <input type="button" value="Proceed" class="btn btn-primary" routerLink="/dashboard" />
             </div>
         </div>
     </div>
