--- a/src/app/pages/layout/dashboard/dashboard.component.html
+++ b/src/app/pages/layout/dashboard/dashboard.component.html
@@ -1,2 +1,20 @@
-<!-- <app-header [title]="title"></app-header> -->
-<p>dashboard works!</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="p-5">
+            <h3>Dashboard</h3>
+            <h6>Available - 13</h6>
+            <h6>Not Cleaned-5</h6>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="text-center">
+            <div class="form-group">
+                <br />
+                <input type="button" value="TOUR MOTEL ROOMS" class="btn btn-lg btn-primary mt-3" routerLink="/roomInfo" />
+                <br />
+                <input type="button" value="CHECKING CUSTOMERS" class="btn btn-lg btn-success mt-3" routerLink="/customerCheckin" />
+                <br />
+            </div>
+        </div>
+    </div>
+</div>
