--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,3 +3,8 @@
         <h1>{{title}}</h1>
     </div>
 </div>
+
+<a id="loginLink" routerLink="/auth/login">
+    Login
+    <!-- <img src="../../../../assets/images/user.png" style="width: 50px;"> -->
+</a>
