--- a/src/app/pages/layout/rooms/rooms.component.scss
+++ b/src/app/pages/layout/rooms/rooms.component.scss
@@ -30,3 +30,9 @@ img {
     right: 25px !important;
     bottom: 15px !important;
 }
+
+#roomListPanel {
+    max-height: calc(100vh - 150px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
