--- a/src/app/pages/layout/rooms/checkout/checkout.component.html
+++ b/src/app/pages/layout/rooms/checkout/checkout.component.html
@@ -1,43 +1,46 @@
 <div class="container">
     <h3 class="w-100 text-center">Check out room</h3>
     <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="row mt-2">
-                <div class="col-md-6">Room No</div>
-                <div class="col-md-6">{{room?.roomNo}}</div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-md-6">Check out date</div>
-                <div class="col-md-6">
-                    <input type="text" class="form-control" />
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <div class="card p-3">
+                <div class="row mt-2">
+                    <div class="col-md-6">Room No</div>
+                    <div class="col-md-6">{{room?.roomNo}}</div>
                 </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-md-6">Room charges</div>
-                <div class="col-md-6">
-                    <input type="text" class="form-control" value="{{room?.charges}}" />
+                <div class="row mt-2">
+                    <div class="col-md-6">Check out date</div>
+                    <div class="col-md-6">
+                        <input type="text" placeholder="Datepicker" class="form-control" bsDatepicker [bsValue]="bsValue" [bsConfig]="{ isAnimated: true }">
+                    </div>
                 </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-md-6">Extra charges</div>
-                <div class="col-md-6">
-                    <select class="form-control">
+                <div class="row mt-2">
+                    <div class="col-md-6">Room charges</div>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" value="{{room?.charges}}" />
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-md-6">Extra charges</div>
+                    <div class="col-md-6">
+                        <select class="form-control">
                         <option value="">1</option>
                         <option value="">2</option>
                         <option value="">3</option>
                     </select>
+                    </div>
                 </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-md-6">Total</div>
-                <div class="col-md-6">
-                    <input type="text" class="form-control" value='{{totalCharge}}' />
+                <div class="row mt-2">
+                    <div class="col-md-6">Total</div>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" value='{{totalCharge}}' />
+                    </div>
+                    <div class="col-md-12 mt-2 text-right">
+                        <button type="button" class="btn btn-primary pull-right">Pay</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-3"></div>
     </div>
 </div>
-
-{{room | json}}
