--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,9 @@
 <div class="row">
     <div class="col-12 text-center p-2 headerTitle">
+        <a id="homeIcon" routerLink="/">
+            <img src="../../../../assets/images/Home.png">
+        </a>
+
         <h1>{{title}}</h1>
     </div>
 </div>
