--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,3 +8,14 @@
     top: 15px;
     right: 15px;
 }
+
+#homeIcon {
+    position: absolute;
+    left: 25px;
+    top: 15px;
+    cursor: pointer;
+}
+
+#homeIcon img {
+    width: 30px;
+}
