--- a/src/app/pages/layout/customer/search-user/search-user.component.html
+++ b/src/app/pages/layout/customer/search-user/search-user.component.html
@@ -5,12 +5,12 @@
         <div class="col-md-8">
             <form #f="ngForm" (ngSubmit)="f.form.valid">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" name="FloorNo" list="customerList" />
+                    <input type="text" class="form-control" name="FloorNo" list="customerList" [(ngModel)]="customerModel.Id" />
                     <div class="input-group-append">
-                        <button type="button" class="input-group-text" id="btnExistuser" routerLink="/room/checkin/1">Go</button>
+                        <button type="button" class="input-group-text" id="btnExistuser" routerLink="/room/checkin/{{roomId}}/{{customerModel.Id}}" [disabled]="!customerModel.Id">Go</button>
                     </div>
                     <datalist id="customerList">
-                    <option [value]="customer.FirstName" *ngFor="let customer of customers">{{customer?.FirstName}}</option>
+                    <option [value]="customer.Id" *ngFor="let customer of customers">{{customer?.FirstName}}</option>
                 </datalist>
                 </div>
             </form>
@@ -21,3 +21,4 @@
     </div>
 
 </div>
+{{customerModel | json}} {{roomId}}
