document model added

--- a/src/app/pages/layout/customer/checkin/checkin.component.html
+++ b/src/app/pages/layout/customer/checkin/checkin.component.html
@@ -11,7 +11,7 @@
                     <div class="col-md-4">Last Name </div>
                     <div class="col-md-8">{{customerModel.LastName}} </div>
                     <div class="col-md-4">Document </div>
-                    <div class="col-md-8">{{customerModel.Document}} </div>
+                    <div class="col-md-8">{{customerModel.DocumentNo}} </div>
                     <div class="col-md-4">Document number </div>
                     <div class="col-md-8">{{customerModel.DocumentNo}} </div>
                     <div class="col-md-4">Telephone </div>
