register page design

--- a/src/app/pages/layout/customer/search-user/search-user.component.html
+++ b/src/app/pages/layout/customer/search-user/search-user.component.html
@@ -15,10 +15,10 @@
                 </div>
             </form>
             <h5>New user ?</h5>
-            <button type="button" class="btn btn-success" routerLink="/customer/register/1">Add + </button>
+            <button type="button" class="btn btn-success btn-lg" routerLink="/customer/register/1">Add New Customer </button>
         </div>
         <div class="col-md-2"></div>
     </div>
 
 </div>
-{{customerModel | json}} {{roomId}}
+<!-- {{customerModel | json}} {{roomId}} -->
