--- a/src/app/pages/layout/rooms/checkout/checkout.component.html
+++ b/src/app/pages/layout/rooms/checkout/checkout.component.html
@@ -18,8 +18,8 @@
                     <div class="row mt-2">
                         <div class="col-md-6">Room charges</div>
                         <div class="col-md-6">
-                            <input type="text" (change)="CalcTotal()" class="form-control" autocomplete="off" formControlName="roomCharge" [ngClass]="{'is-invalid':checkoutForm.controls.roomCharge.errors }">
-                            <div *ngIf="checkoutForm.controls.roomCharge.errors && checkoutForm.controls.roomCharge.touched" class="invalid-feedback text-left validationmsg">
+                            <input type="text" (change)="CalcTotal()" class="form-control" [(ngModel)]="charge" autocomplete="off" formControlName="roomCharge" [ngClass]="{'is-invalid':checkoutForm.controls.roomCharge.errors && submitted }">
+                            <div *ngIf="checkoutForm.controls.roomCharge.errors && checkoutForm.controls.roomCharge.touched" class="invalid-feedback text-left">
                                 <div *ngIf="checkoutForm.controls.roomCharge.errors.required">Room Charge is required</div>
                                 <div *ngIf="checkoutForm.controls.roomCharge.errors.minLength">Min charge must be 2 </div>
                             </div>
@@ -28,13 +28,13 @@
                     <div class="row mt-2">
                         <div class="col-md-6">Extra charges</div>
                         <div class="col-md-6">
-                            <select (change)="CalcTotal()" class="form-control" formControlName="extraCharge" [ngClass]="{'is-invalid':checkoutForm.controls.extraCharge.errors }">
+                            <select (change)="CalcTotal()" class="form-control" [(ngModel)]="extraCharge" formControlName="extraCharge" [ngClass]="{'is-invalid':checkoutForm.controls.extraCharge.errors && submitted }">
                                 <option value="0" selected>0%</option>
                                 <option value="10">10%</option>
                                 <option value="15">15%</option>
                                 <option value="20">20%</option>
                             </select>
-                            <div *ngIf="checkoutForm.controls.extraCharge.errors && checkoutForm.controls.extraCharge.touched" class="invalid-feedback text-left validationmsg">
+                            <div *ngIf="checkoutForm.controls.extraCharge.errors && checkoutForm.controls.extraCharge.touched" class="invalid-feedback text-left">
                                 <div *ngIf="checkoutForm.controls.extraCharge.errors.required">Extra Charge is required</div>
                             </div>
                         </div>
@@ -42,10 +42,10 @@
                     <div class="row mt-2">
                         <div class="col-md-6">Total</div>
                         <div class="col-md-6">
-                            <input type="text" class="form-control disabled" formControlName="totalCharge" />
+                            <input type="text" class="form-control disabled" disabled formControlName="totalCharge" [(ngModel)]="totalCharge" />
                         </div>
                         <div class="col-md-12 mt-2 text-right">
-                            <button type="button" class="btn btn-primary pull-right">Pay</button>
+                            <button type="submit" class="btn btn-primary pull-right">Pay</button>
                         </div>
                     </div>
                 </div>
