Passed Id for exist user

--- a/src/app/pages/layout/customer/search-user/search-user.component.html
+++ b/src/app/pages/layout/customer/search-user/search-user.component.html
@@ -15,7 +15,7 @@
                 </div>
             </form>
             <h5>New user ?</h5>
-            <button type="button" class="btn btn-success btn-lg" routerLink="/customer/register/1">Add New Customer </button>
+            <button type="button" class="btn btn-success btn-lg" routerLink="/customer/register/{{roomId}}">Add New Customer </button>
         </div>
         <div class="col-md-2"></div>
     </div>
