--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header [title]="utilityService.title"></app-header>
+<app-header></app-header>
 <app-page-loader></app-page-loader>
 <router-outlet></router-outlet>
