--- a/src/app/pages/layout/rooms/checkout/checkout.component.html
+++ b/src/app/pages/layout/rooms/checkout/checkout.component.html
@@ -2,55 +2,66 @@
     <h3 class="w-100 text-center">Check out room</h3>
     <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
                 <div class="card p-3">
-                    <div class="row mt-2">
-                        <div class="col-md-6">Room No</div>
-                        <div class="col-md-6">{{room?.RoomNo}}</div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-md-6">Check out date</div>
-                        <div class="col-md-6">
-                            <input type="text" placeholder="Datepicker" class="form-control" bsDatepicker [bsValue]="bsValue">
-                        </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-md-6">Room charges</div>
-                        <div class="col-md-6">
-                            <input type="text" (change)="CalcTotal()" class="form-control" [(ngModel)]="charge" autocomplete="off" formControlName="roomCharge" [ngClass]="{'is-invalid':checkoutForm.controls.roomCharge.errors && submitted }">
-                            <div *ngIf="checkoutForm.controls.roomCharge.errors && checkoutForm.controls.roomCharge.touched" class="invalid-feedback text-left">
-                                <div *ngIf="checkoutForm.controls.roomCharge.errors.required">Room Charge is required</div>
-                                <div *ngIf="checkoutForm.controls.roomCharge.errors.minLength">Min charge must be 2 </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="cardSection">
+                                <img class="roomImg" src="https://images.oyoroomscdn.com/uploads/hotel_image/39654/medium/c9373c2b206174a2.jpg">
+                                <h4>Room No : {{room?.RoomNo}}</h4>
+                                <ul>
+                                    <li><b>Number of bed : </b>{{room?.NoOfBed}}</li>
+                                    <li><b>AC : </b>{{room.AcnonAc?'Available':'Not available'}}</li>
+                                    <li><b>Parking slot : </b>Available</li>
+                                    <li><b>Breakfast : </b>Available</li>
+                                </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-md-6">Extra charges</div>
-                        <div class="col-md-6">
-                            <select (change)="CalcTotal()" class="form-control" [(ngModel)]="extraCharge" formControlName="extraCharge" [ngClass]="{'is-invalid':checkoutForm.controls.extraCharge.errors && submitted }">
-                                <option value="0" selected>0%</option>
-                                <option value="10">10%</option>
-                                <option value="15">15%</option>
-                                <option value="20">20%</option>
-                            </select>
-                            <div *ngIf="checkoutForm.controls.extraCharge.errors && checkoutForm.controls.extraCharge.touched" class="invalid-feedback text-left">
-                                <div *ngIf="checkoutForm.controls.extraCharge.errors.required">Extra Charge is required</div>
+                        <div class="col-md-8">
+                            <div class="cardSection">
+                                <div class="row mt-2">
+                                    <div class="col-md-6">Check out date</div>
+                                    <div class="col-md-6">
+                                        <input type="text" placeholder="Datepicker" class="form-control" bsDatepicker [bsValue]="bsValue">
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-md-6">Room charges</div>
+                                    <div class="col-md-6">
+                                        <input type="text" (change)="CalcTotal()" class="form-control" [(ngModel)]="charge" autocomplete="off" formControlName="roomCharge" [ngClass]="{'is-invalid':checkoutForm.controls.roomCharge.errors && submitted }">
+                                        <div *ngIf="checkoutForm.controls.roomCharge.errors && checkoutForm.controls.roomCharge.touched" class="invalid-feedback text-left">
+                                            <div *ngIf="checkoutForm.controls.roomCharge.errors.required">Room Charge is required</div>
+                                            <div *ngIf="checkoutForm.controls.roomCharge.errors.minLength">Min charge must be 2 </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-md-6">Extra charges</div>
+                                    <div class="col-md-6">
+                                        <input type="text" (change)="CalcTotal()" class="form-control" [(ngModel)]="extraCharge" autocomplete="off" formControlName="extraCharge" [ngClass]="{'is-invalid':checkoutForm.controls.extraCharge.errors && submitted }">
+                                        <div *ngIf="checkoutForm.controls.extraCharge.errors && checkoutForm.controls.extraCharge.touched" class="invalid-feedback text-left">
+                                            <div *ngIf="checkoutForm.controls.extraCharge.errors.required">Room Charge is required</div>
+                                            <div *ngIf="checkoutForm.controls.extraCharge.errors.minLength">Min charge must be 2 </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row mt-2">
+                                    <div class="col-md-6">Total</div>
+                                    <div class="col-md-6">
+                                        <input type="text" class="form-control disabled" disabled formControlName="totalCharge" [(ngModel)]="totalCharge" />
+                                    </div>
+                                    <div class="col-md-12 mt-2 text-right">
+                                        <button type="submit" class="btn btn-primary pull-right" [disabled]="totalCharge==0">Make payment</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col-md-6">Total</div>
-                        <div class="col-md-6">
-                            <input type="text" class="form-control disabled" disabled formControlName="totalCharge" [(ngModel)]="totalCharge" />
-                        </div>
-                        <div class="col-md-12 mt-2 text-right">
-                            <button type="submit" class="btn btn-primary pull-right">Pay</button>
-                        </div>
+
                     </div>
                 </div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-1"></div>
         </div>
     </form>
 </div>
