--- a/src/app/pages/layout/dashboard/dashboard.component.html
+++ b/src/app/pages/layout/dashboard/dashboard.component.html
@@ -1,13 +1,19 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-md-4">
-            <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/occupied">Occupied Rooms</button>
+            <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/occupied">
+                Occupied Rooms <span class="circle">{{occupiedRooms?.length}}</span>
+            </button>
         </div>
         <div class="col-md-4">
-            <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/vacant">Vacant Rooms</button>
+            <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/vacant">
+                Vacant Rooms<span class="circle">{{vacantRooms?.length}}</span>
+            </button>
         </div>
         <div class="col-md-4">
-            <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/underclining">Under Cleaning Rooms</button>
+            <button class="btn btn-lg btn-menu" type="button" routerLink="/rooms/underclining">
+                Under Cleaning Rooms<span class="circle">{{undercleanRooms?.length}}</span>
+            </button>
         </div>
     </div>
 </div>
