--- a/src/app/pages/layout/dashboard/dashboard.component.scss
+++ b/src/app/pages/layout/dashboard/dashboard.component.scss
@@ -19,7 +19,7 @@
 
 .btn-menu {
     margin: 10px;
-    padding: 15px 45px;
+    padding: 15px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
@@ -35,4 +35,13 @@
     /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
+}
+
+.circle {
+    border-radius: 15px;
+    background-image: radial-gradient(rgb(2, 11, 24) 15%, rgb(6, 72, 158) 60%);
+    margin-left: 15px;
+    width: 30px;
+    height: 30px;
+    display: inline-table;
 }
