--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,11 +4,10 @@
             <img src="../../../../assets/images/Home.png">
         </a>
 
-        <h1>{{title}}</h1>
+        <h1>MOTEL ADMIN</h1>
     </div>
 </div>
 
 <a id="loginLink" routerLink="/auth/login">
     Login
-    <!-- <img src="../../../../assets/images/user.png" style="width: 50px;"> -->
 </a>
