--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,12 @@ body {
 }
 
 .card {
-    box-shadow: 0 0 10px lightgray;
+    // box-shadow: 0 0 10px lightgray;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24) !important;
+}
+
+.card:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .19), 0 6px 6px rgba(0, 0, 0, .23) !important;
 }
 
 .boldPanel label {
